# cegis

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp  model.hpp  observer.cpp  observer.hpp  problems.cpp  problems.hpp  program_printer.cpp  program_printer.hpp  synthesizer.cpp  synthesizer.hpp
